paragraph revision and adding data

--- a/co2_emissions_in_US.ipynb
+++ b/co2_emissions_in_US.ipynb
@@ -1259,95 +1259,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "6. Compare CO2 emission trends over time.\n",
-        "Trend Pattern:\n",
+        "CO₂ emission trends in Indonesia and the United States reveal distinct patterns shaped by their levels of economic development. In Indonesia, a developing country, emissions have generally increased over time. This growth is driven by rising energy consumption, industrialization, population growth, and continued reliance on fossil fuels, particularly coal. A temporary decline occurred around 2020, largely due to the COVID-19 pandemic, which disrupted industrial activity, transportation, and the overall economy. Following this period, emissions began to rise again as economic activity resumed.\n",
         "\n",
-        "Generally shows an upward trend in emissions growth over time.\n",
+        "In contrast, the United States, a developed country, exhibits a long-term pattern of stagnation and gradual decline in emissions. Early peaks were followed by reductions influenced by energy transitions from coal to natural gas and renewables, improved energy efficiency, stricter environmental regulations, and a shift from manufacturing to the service sector. Significant drops in emissions were observed during the 2008–2009 global financial crisis and in 2020 due to the pandemic. Unlike Indonesia, U.S. emissions did not return to previous peak levels, reflecting structural changes in the economy.\n",
         "\n",
-        "The increase is relatively stable with some minor fluctuations.\n",
-        "\n",
-        "Interpretation:\n",
-        "\n",
-        "Indonesia's emissions growth is due to:\n",
-        "\n",
-        "Increased energy consumption\n",
-        "\n",
-        "Industrialization\n",
-        "\n",
-        "Population growth\n",
-        "\n",
-        "High dependence on fossil fuels (coal).\n",
-        "\n",
-        "Significant Decline Event:\n",
-        "\n",
-        "Emissions decreased around 2020.\n",
-        "\n",
-        "Possible Causes:\n",
-        "\n",
-        "COVID-19 pandemic\n",
-        "\n",
-        "Decreased industrial activity\n",
-        "\n",
-        "Transportation restrictions\n",
-        "\n",
-        "National economic slowdown\n",
-        "\n",
-        "After 2020, emissions increased again as the economy recovered.\n",
-        "\n",
-        "United States (Developed Country)\n",
-        "\n",
-        "Trend Pattern:\n",
-        "\n",
-        "Shows stagnation to a long-term downward trend.\n",
-        "\n",
-        "Emissions peaked in the early data period, then gradually declined.\n",
-        "\n",
-        "Interpretation:\n",
-        "\n",
-        "The decline in emissions was influenced by:\n",
-        "\n",
-        "Energy transition from coal to natural gas and renewable energy\n",
-        "\n",
-        "Improved energy efficiency\n",
-        "\n",
-        "Stricter environmental regulations\n",
-        "\n",
-        "Economic shift from manufacturing to the service sector\n",
-        "\n",
-        "Significant Decline Events:\n",
-        "\n",
-        "Sharp decline in 2008–2009\n",
-        "\n",
-        "Significant decline again in 2020\n",
-        "\n",
-        "Possible Causes:\n",
-        "\n",
-        "2008 global financial crisis\n",
-        "\n",
-        "COVID-19 pandemic in 2020\n",
-        "\n",
-        "After the crisis, emissions did not return to their previous peak levels, indicating structural changes in the economy.\n",
-        "\n",
-        "Comparison of Emission Patterns\n",
-        "Aspects: Indonesia and the United States\n",
-        "Long-term trend: Increase/Decrease\n",
-        "Main pattern: Growth: Stagnation & decline\n",
-        "Impact of the pandemic: Temporary decline/Significant decline\n",
-        "Main factors: Industrialization & fossil fuels: Energy policy & efficiency\n",
-        "\n",
-        ">Key Insights\n",
-        "\n",
-        "Developing countries tend to experience rising emissions alongside economic growth\n",
-        "\n",
-        "Developed countries show that economic growth is not always accompanied by rising emissions\n",
-        "\n",
-        "The global crisis and pandemic have had a significant impact on emissions in both groups of countries\n",
-        "\n",
-        "Emission mitigation efforts need to be tailored to each country's stage of economic development\n",
-        "\n",
-        ">Summary\n",
-        "\n",
-        "“Trend analysis shows that Indonesia, as a developing country, experienced increasing CO₂ emissions alongside economic growth and industrialization, while the United States, as a developed country, showed a trend of stagnation to decline in emissions due to energy and efficiency policies. The significant decline in 2020 in both countries was related to the COVID-19 pandemic.”\n"
+        "Overall, these trends indicate that developing countries often experience rising emissions alongside economic growth, whereas developed countries can achieve economic growth while reducing emissions through policy interventions and technological improvements. Global crises, such as the COVID-19 pandemic, have caused temporary declines in emissions across both contexts, but long-term trends are largely shaped by each country’s stage of development and energy strategy."
       ],
       "metadata": {
         "id": "JUCBN5rhir4A"
